Wed Feb 13 18:37:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew): skip prepending modules and return the method bound
	  on the given class.  [ruby-core:52160] [Bug #7836]

Wed Feb 13 18:11:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (method_original_name): new methods Method#original_name and
	  UnboundMethod#original_name.  [ruby-core:52048] [Bug #7806]
	  [EXPERIMENTAL]

	* proc.c (method_inspect): show the given name primarily, and
	  original_id if aliased.  [ruby-core:52048] [Bug #7806]

Wed Feb 13 17:56:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (warnflags): disable -Werror by default unless
	  development.  [ruby-core:52131] [Bug #7830]

Wed Feb 13 06:05:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Return BINARY strings from Gem.gzip and Gem.gunzip.
	  Fixes intermittent test failures.  RubyGems issue #450 by Jeremey
	  Kemper.
	* test/rubygems/test_gem.rb:  Test for the above.

Wed Feb 13 05:49:21 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test functions just after struct members.

Tue Feb 12 12:02:35 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: merge JSON 1.7.7.
	  This includes security fix. [CVE-2013-0269]
	  https://github.com/flori/json/commit/d0a62f3ced7560daba2ad546d83f0479a5ae2cf2
	  https://groups.google.com/d/topic/rubyonrails-security/4_YvCpLzL58/discussion

Mon Feb 11 23:08:48 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: enable rb_cv_page_size_log test for MirOS BSD.

Mon Feb 11 20:06:38 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: use -pthread on mirbsd*.

Mon Feb 11 16:07:09 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: add SOLIBS and LIBRUBY_SO definition for mirbsd*.

Mon Feb 11 13:17:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rubysitearchprefix): sitearchdir and vendorarchdir
	  should use sitearch, not arch.  [ruby-dev:46964] [Bug #7823]
